# CLM

./: .gitignore  Installation.txt  ingestion.py  pyproject.toml  test.py
clm_system/: .dockerignore  README.md  all_contracts.json  big_contract1.txt  cli.py  combined.txt  config.py  deal.json  main.py  mongo_collections.txt  mongodb_exporting.py  ocr_output.txt  pytest.ini  recap.json  run_zenml_workflow.py  sample_contract.json  sample_email.json  test.py  test_contract_workflow.py  test_email_workflow.py  test_modular.py  test_zenml_contract_complete_workflow.py  test_zenml_contract_real.py  test_zenml_contract_storing_workflow.py  test_zenml_contract_workflow.py
clm_system/api/: routes.py  schemas.py
clm_system/core/: ingestion.py  search.py
clm_system/core/database/: elasticsearch_client.py  mongodb_client.py  qdrant_client.py
clm_system/core/pipeline/: __init__.py  base.py  orchestrator.py
clm_system/core/pipeline/chunking/: base.py  contract.py  deal.py  email.py
clm_system/core/pipeline/cleaning/: base.py  contract.py  deal.py  email.py  recap.py
clm_system/core/pipeline/ingestion/: base.py  contract.py  deal.py  email.py  recap.py
clm_system/core/pipeline/preprocessing/: base.py  contract.json  contract.py  docx_processor.py  docx_processor_Rolm.py  docx_processor_VLM.py  ocr_output.txt  pdf_processor.py  sample_contract.docx  sample_contract.json
clm_system/core/query_engine/: helpers.py  query_classifier.py  search.py
clm_system/core/utils/: embeddings.py
clm_system/schemas/: schemas.py
clm_system/zenml_pipelines/: Managing_LLMs.py  document_processing.py  document_processing_old.py  finetuning.py  search_inference_pipeline.py
