# File: pyproject.toml
[tool.poetry]
name = "clm-smart-search"
version = "0.1.0"
description = "Contract Lifecycle Management system with smart search capabilities"
authors = ["Farzan Karami <your.email@example.com>"]
packages = [
    { include = "clm_system" }
]
[tool.poetry.dependencies]
nest-asyncio = "^1.5.7"
zenml = { version = "^0.68.0", extras = ["comet", "server"] }
comet_ml = "^3.47.0"
beautifulsoup4 = "^4.12.2"  # Add this line
python-dateutil = "^2.9.0.post0"
pymupdf = "^1.24.3"       # For fitz (PDF processing)
spacy = ">=3.0,<4.0"
python = ">=3.9,<3.12"
aiohttp = "^3.8.4"
# fastapi = "^0.95.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pymongo = {extras = ["srv"], version = "^4.12.0"}
elasticsearch = "^8.7.0"
qdrant-client = "^1.8.0"
sentence-transformers = "^2.2.2"
# pydantic = "^1.10.7"
pydantic = "^2.8.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
pandas = "^2.0.0"
numpy = "^1.24.3"
torch = "^2.1.0"
transformers = "^4.36.0"
accelerate = "^0.26.0"  # Add this line
openai = "^1.72.0"
motor = "^3.7.0"
pydantic-settings = "^2.8.1"
opik = "^1.7.7"
python-docx = "^1.1.0"    # For DOCX processing
Pillow = "^10.0.0"        # For image handling
pytesseract = "^0.3.10"   # For OCR on images/tables
opencv-python = "^4.11.0.86"
fuzzywuzzy = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest-asyncio = "^0.21.0"
ipdb = "^0.13.13"
[tool.poe.tasks]
run-workflow = "python run_zenml_workflow.py"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
